from enum import Enum

class Color(Enum):
    BLACK = "BLACK"
    WHITE = "WHITE"